ajustes feitos pra login - não fazer merge